# k8s-raffle-bot

./: README.md  docker-compose.yaml  pyproject.toml
rafflebot/: models.py  server.py
rafflebot/cogs/: __init__.py  hello.py  raffle.py  raffle_admin.py
rafflebot/core/: bot.py  database.py  emoji.py  exceptions.py  utils.py
rafflebot/tasks/: award.py
scripts/: invites.py
