[tool.poetry]
name = "rafflebot"
version = "0.1.0"
description = "A Discord raffle bot"
authors = ["Marco Ceppi <marco@ceppi.net>"]
license = "apache-2.0"

[tool.poetry.dependencies]
python = "^3.8"
"discord.py" = "^1.5.1"
aioredis = "^1.3.1"
humanize = "^3.1.0"

[tool.poetry.dev-dependencies]
pylint = "^2.6.0"
black = "^20.8b1"
isort = "^5.6.4"

[tool.poetry.scripts]
rafflebot = 'rafflebot.server:run'

[tool.black]
line-length = 120
target-version = ['py38']

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 3
use_parentheses = true
ensure_newline_before_comments = true
line_length = 120

[tool.pylint.messages_control]
disable = "C0330, C0326"

[tool.pylint.format]
max-line-length = "120"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
